completed JavaScript work in prework-study-guide

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
-        <ul>          
+        <ul>
+          <li>HTML is the frame work of a website.</li>          
           <li>The head element contains information about the webpage.</li>
-          <li>The body element represents the visible content shown to the user</li>
+          <li>The body element represents the visible content shown to the user.</li>
         </ul>
       </section>
 
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Amargin indicates how much space w want around the outside of an element</li>
+          <li>CSS is the decore portion of the website.</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
           <li>A padding indicates how much space we want around the content inside an element</li>
-          <li> Make sure to place a ";" after each line item of the CSS descriptions</li>
+          <li>Make sure to place a ";" after each line item of the CSS descriptions</li>
         </ul>        
       </section>
 
@@ -44,7 +46,9 @@
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
         <ul>
-         <li>Enter your Javascript notes here</li>
+          <li>JavaScript is the functioning and operation part of the website.</li>
+         <li>A variable is a named container that allows us to store data in our code.</li>
+         <li>Control flow is the order in which a computer code in a script.</li>
        </ul>
       </section>
 
